# SGXDataCenterAttestationPrimitives

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  License.txt  Makefile  README.md  SGX_DCAP.sln
QuoteGeneration/quote_wrapper/td-ql-logic-rs/: Cargo.toml
QuoteGeneration/quote_wrapper/td-ql-logic-rs/src/: lib.rs
QuoteVerification/Src/: .gitignore  CMakeLists.txt  clean  coverage  debug  gdbTests  profile  release  runUT
QuoteVerification/Src/AttestationApp/: CMakeLists.txt
QuoteVerification/Src/AttestationApp/sampleData/: intermediateCaCrl.pem  pckCert.pem  pckSignChain.pem  qeIdentity.json  rootCaCrl.pem  tcbInfo.json  tcbSignChain.pem  trustedRootCaCert.pem
QuoteVerification/Src/AttestationApp/src/: AppCore.cpp  AppCore.h  AppOptions.h  AppOptionsParser.cpp  AppOptionsParser.h  AttestationLibraryAdapter.cpp  AttestationLibraryAdapter.h  ColorUtils.cpp  ColorUtils.h  FileReader.cpp  FileReader.h  IAttestationLibraryAdapter.h  IFileReader.h  StatusPrinter.cpp  StatusPrinter.h  main.cpp
QuoteVerification/Src/AttestationApp/test/: AppCoreTests.cpp  AppOptionsParserTests.cpp  CMakeLists.txt
QuoteVerification/Src/AttestationApp/test/Mocks/: AttestationLibraryAdapterMock.h  FileReaderMock.h
QuoteVerification/Src/AttestationLibrary/: .gitignore  CMakeLists.txt
QuoteVerification/Src/AttestationLibrary/include/SgxEcdsaAttestation/: QuoteVerification.h
QuoteVerification/Src/AttestationLibrary/src/: QuoteVerification.cpp
QuoteVerification/Src/AttestationLibrary/src/CertVerification/: CertificateChain.cpp  CertificateChain.h  X509Constants.h
QuoteVerification/Src/AttestationLibrary/src/OpensslHelpers/: Assert.h  Bytes.h  DigestUtils.cpp  DigestUtils.h  KeyUtils.cpp  KeyUtils.h  OpensslInit.cpp  OpensslInit.h  OpensslTypes.h  SignatureVerification.cpp  SignatureVerification.h
QuoteVerification/Src/AttestationLibrary/src/PckParser/: CertStore.cpp  CertStore.h  CrlStore.cpp  CrlStore.h  FormatException.h  PckParser.cpp  PckParser.h  PckParserUtils.cpp  PckParserUtils.h  SgxExtension.cpp  SgxExtension.h
QuoteVerification/Src/AttestationLibrary/src/QuoteVerification/: ByteOperands.cpp  ByteOperands.h  Quote.cpp  Quote.h  QuoteConstants.h
QuoteVerification/Src/AttestationLibrary/src/Utils/: JsonParser.cpp  JsonParser.h
QuoteVerification/Src/AttestationLibrary/src/Verifiers/: BaseVerifier.cpp  BaseVerifier.h  CommonVerifier.cpp  CommonVerifier.h  EnclaveIdentityJsonVerifier.cpp  EnclaveIdentityJsonVerifier.h  EnclaveReportVerifier.cpp  EnclaveReportVerifier.h  IdentityJsonVerifierBase.cpp  IdentityJsonVerifierBase.h  PckCertVerifier.cpp  PckCertVerifier.h  PckCrlVerifier.cpp  PckCrlVerifier.h  QEIdentityJsonVerifier.cpp  QEIdentityJsonVerifier.h  QEIdentityVerifier.cpp  QEIdentityVerifier.h  QuoteVerifier.cpp  QuoteVerifier.h  TCBInfoJsonVerifier.cpp  TCBInfoJsonVerifier.h  TCBInfoVerifier.cpp  TCBInfoVerifier.h  TCBSigningChain.cpp  TCBSigningChain.h
QuoteVerification/Src/AttestationLibrary/templates/: Version.h.in
QuoteVerification/Src/AttestationLibrary/test/CommonTestUtils/: DigestUtilsUT.cpp  EcdsaSignatureGenerator.cpp  EcdsaSignatureGenerator.h  KeyHelpers.h  QEIdentityGenerator.cpp  QEIdentityGenerator.h  QEIdentityJsonGenerator.cpp  QEIdentityJsonGenerator.h  QuoteGenerator.cpp  TcbInfoGenerator.cpp  TcbInfoGenerator.h  TcbInfoJsonGenerator.cpp  TcbInfoJsonGenerator.h  X509CertGenerator.cpp  X509CertGenerator.h  X509CertTypes.cpp  X509CertTypes.h  X509CrlGenerator.cpp  X509CrlGenerator.h
QuoteVerification/Src/AttestationLibrary/test/IntegrationTests/: .gitignore  CMakeLists.txt  ReadFile.cpp  ReadFile.h  VerifyEnclaveReportIT.cpp  VerifyPCKCertificateIT.cpp  VerifyPCKRevocationListIT.cpp  VerifyPckCertIT.cpp  VerifyPckCrlIT.cpp  VerifyQEIdentityIT.cpp  VerifyQuoteIT.cpp  VerifyTCBInfoIT.cpp
QuoteVerification/Src/AttestationLibrary/test/IntegrationTests/VerifyChainTestData/InChainRoot_InvalidExtensions/: IntelSGXCertificateChain.pem  IntelSGXRootCACertificate.pem  intermediateCaCrl.pem  rootCaCrl.pem
QuoteVerification/Src/AttestationLibrary/test/IntegrationTests/VerifyChainTestData/InChainRoot_InvalidIssuer/: IntelSGXCertificateChain.pem  IntelSGXRootCACertificate.pem  rootCaCrl.pem  (+1 more)
QuoteVerification/Src/AttestationLibrary/test/IntegrationTests/VerifyPckCrl/: invalidCrl.pem
QuoteVerification/Src/AttestationLibrary/test/IntegrationTests/VerifyTCBInfo/: valid_root.pem  valid_root_crl.pem  valid_tcb.pem
QuoteVerification/Src/AttestationLibrary/test/IntegrationTests/templates/: Paths.h.in
QuoteVerification/Src/AttestationLibrary/test/UnitTests/: BaseVerifierUT.cpp  ByteOperandsUT.cpp  CMakeLists.txt  CertificateChainUT.cpp  CertificateValidityUT.cpp  EnclaveIdentityJsonVerifierUT.cpp  EnclaveReportVerifierUT.cpp  GetQECertificationDataSizeUT.cpp  GetQECertificationDataUT.cpp  GetVersionUT.cpp  JsonParserUT.cpp  KeyUtilsUT.cpp  PckCertVerifierUT.cpp  PckCrlVerifierUT.cpp  QEIdentityJsonVerifierUT.cpp  QEIdentityVerifierUT.cpp  QuoteParsingUT.cpp  QuoteVerifierUT.cpp  SignatureVerificationUT.cpp  TCBInfoJsonVerifierUT.cpp  TCBInfoVrifierUT.cpp  VerifyPckCertUT.cpp  VerifyTcbSigningChainUT.cpp
QuoteVerification/Src/AttestationLibrary/test/UnitTests/Constants/: QuoteTestConstants.h  X509TestConstants.h
QuoteVerification/Src/AttestationLibrary/test/UnitTests/Mocks/: CertCrlStoresMocks.h  CommonVerifierMock.h  EnclaveReportVerifierMock.h  PckCrlVerifierMock.h  QEIdentityJsonVerifierMock.h  TCBInfoJsonVerifierMock.h  TcbSigningChainMock.h
QuoteVerification/Src/AttestationLibrary/test/UnitTests/TestUtils/: DigestUtils.cpp  DigestUtils.h  QuoteGenerator.h  QuoteGeneratorUT.cpp
QuoteVerification/dcap_quoteverify/sgx-dcap-quoteverify-rs/: Cargo.toml  README.md
QuoteVerification/dcap_quoteverify/sgx-dcap-quoteverify-rs/src/: lib.rs  test.rs
QuoteVerification/dcap_quoteverify/sgx-dcap-quoteverify-sys/: Cargo.toml  README.md  build.rs
QuoteVerification/dcap_quoteverify/sgx-dcap-quoteverify-sys/src/: lib.rs
SampleCode/RustQuoteVerificationSample/: Cargo.toml  README.md  build.rs
SampleCode/RustQuoteVerificationSample/src/: main.rs
(+2389 files in other folders)
