[package]
name = "td-ql-logic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"td-ql-logic-sys" = { version = "0.1.0", path = "../td-ql-logic-sys" }
"qpl-rs" = { version = "0.1.0", path = "../../qpl-rs" }
"libc" = { version = "0.2" }

