[package]
name = "intel-tee-quote-verification-rs"
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Intel(R) TEE Quote Verification Rust Library"
documentation = "https://intel.github.io/SGXDataCenterAttestationPrimitives/docs/rust-qvl-doc/intel_tee_quote_verification_rs"
readme = "README.md"
homepage = "https://github.com/intel/SGXDataCenterAttestationPrimitives"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel-tee-quote-verification-sys = "0.2.1"
