[package]
name = "sgx-dcap-quoteverify-sys"
version = "0.2.0"
edition = "2021"
links = "sgx_dcap_quoteverify"
license = "BSD-3-Clause"
description = "Rust raw FFI bindings for SGX DCAP Quote Verification Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
