[package]
name = "intel-tee-quote-verification-sys"
version = "0.2.1"
edition = "2021"
links = "sgx_dcap_quoteverify"
license = "BSD-3-Clause"
description = "Intel(R) TEE Quote Verification Rust Library"
documentation = "https://intel.github.io/SGXDataCenterAttestationPrimitives/docs/rust-qvl-doc/intel_tee_quote_verification_sys"
readme = "README.md"
homepage = "https://github.com/intel/SGXDataCenterAttestationPrimitives"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.65.1"
